fix gaps between services in features section

--- a/styles.css
+++ b/styles.css
@@ -1196,7 +1196,7 @@ footer ul {
   }
 
   .service__row {
-    padding: 32px 8px;
+    padding: 16px 8px;
     margin: 0 16px;
   }
 
